src/objects/CoverCode__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID for Reference</description>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MatchingCoverCodeProductType__c</fullName>
        <description>Used this to match cover code with product , product type</description>
        <formula>Name +  text(Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MatchingCoverCodeProductType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thunderhead_Description__c</fullName>
        <label>Thunderhead Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Description__c</fullName>
        <formula>if(ISPICKVAL(Type__c, &apos;H&apos;) ,&apos;Hospital&apos;,
     if(ISPICKVAL(Type__c, &apos;A&apos;) ,&apos;Ancillary&apos;,
        if(ISPICKVAL(Type__c, &apos;M&apos;),&apos; Medical&apos;,  text(Type__c))  
        )
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CoverCode</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Type_Description__c</columns>
        <columns>Thunderhead_Description__c</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CoverCode</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CoverCodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Type_cannot_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Type__c )</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Type cannot be changed</errorMessage>
    </validationRules>
</CustomObject>